snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.jar.md5
a2dac20b713e82e9f947e9ef787b790f